--- a/genetic/build.gradle
+++ b/genetic/build.gradle
@@ -14,11 +14,6 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
+    compile project(':core')
     // TODO: Add dependencies here
-    //   but note that JUnit should have already been added in parent.gradle.
-    //   By default, only the Maven Central Repository is specified in
-    //   parent.gradle.
-    //
-    // You can read more about how to add dependency here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
 }
